--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,27 @@
+body {
+    background-color: #e9e9e9;
+}
+
+nav.top-bar {
+    background-color: #1f242a;
+}
 
 img.profile-image {
-    width: 130px;
-    height: 130px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+div.row {
+    background-color: #e9e9e9;
+}
+
+table {
+    box-shadow: 0px 0px 10px grey;
+    min-width: 900px;
+    align-content: center;
+}
+
+span#error {
+    display: none;
 }
